Iron-Roots/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:wght@300&family=Oswald:wght@200..700&display=swap');


:root {
    --primary-color: #D48829;
    --secondary-color: #1C1B1B;
    --paragraph-text-color: #8A8178;
    --header-font: "Oswald", sans-serif;
    --paragraph-font: "Inter", sans-serif;
    --primary-background-color: #111010;
    --secondary-background-color: #1C1B1B
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    list-style: none;
}

a {
    text-decoration: none;
}

p {
    line-height: 1.6;
}


.container {
    max-width: 1600px;
    margin: 0 auto;
    padding: 0 40px;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

/* NAVBAR */

.navbar {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    height: 70px;
    font-family: var(--paragraph-font);
    border-bottom: 1px solid #8A8178;
    position: sticky;
    top: 0;
    z-index: 999;
}

.navbar .flex {
    justify-content: space-between;
}

.navbar ul {
    display: flex;
}

.navbar li {
    cursor: pointer;
}

.navbar a {
    padding: 10px;
    margin: 0 5px;
    color: var(--paragraph-text-color);
    font-size: 1rem;
    font-weight: 500;
}

.navbar a:hover {
    color: var(--primary-color);
    transition: 0.3s ease;
}

.navbar a:focus {
    color: var(--primary-color);
    border-bottom: 2px solid var(--primary-color);
}

.navbar h1 {
    font-size: 1.2rem;
    font-weight: 700;
}

/* Home Page */
.home-page {
    background-image:  linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), 
    url("../images/gym-background.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    height: calc(100vh - 70px);
    text-align: center;
}

.home-page .container {
    animation: slideInFromBottom 1.5s ease-in;
}

.home-page .flex {
    flex-direction: column;
    gap: 15px;
}

.home-page-location {
    font-size: 1.05rem;
    color: var(--primary-color);
    font-family: var(--paragraph-font);
}

.home-page h1 {
    color: white;
    font-family: var(--header-font);
    font-weight: 700;
    font-size: 3.5rem;
    line-height: 1.2;
}

.paragraph-text {
    color: var(--paragraph-text-color);
    font-family: var(--paragraph-font);
    font-size: 1.15rem;
}

.btn {
    background-color: var(--primary-color);
    padding: 15px 30px;
    border-radius: 5px;
    border: none;
    font-size: 0.95rem;
    font-weight: 600;
    cursor: pointer;
    transition: background-color 0.3s ease-in-out;
}

.btn:hover {
    background-color: #b8711f;
}

/* Services */
.card {
    background-color: var(--secondary-background-color);
    padding: 20px;
    margin: 10px;
    color: white;
    line-height: 1.6;
    border: 1px solid #8A8178;
    border-radius: 5px;
    transition: transform 0.3s ease;
}

.card:hover {
    transform: translateY(-5px);
}


.section-header {
    font-family: var(--header-font);
    color: var(--primary-color);
    text-align: center;
    margin-bottom: 50px;
}

.short-border {
    position: relative;
}

.short-border::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 50px;
    height: 2px;
    background: #D48829;
}

.services .card h1 {
    margin-bottom: 15px;
}


.services .card h3 {
    font-family: var(--header-font);
}

.services .card p {
    font-size: 0.9rem;
}

/* Banner */
.banner .flex {
   text-align: center;
   gap: 25px;
}

.banner {
    font-family: var(--paragraph-font);
    border-top: 1px solid #8A8178;
    border-bottom: 1px solid #8A8178;
}

.banner p {
    color: var(--paragraph-text-color);
    line-height: 2;
}

.banner p span {
    color: white;
}

.banner h1 {
    color: var(--primary-color);
    font-size: 2.3rem;
}

/* Contact */
.contact {
    display: flex;
}

.contact .flex {
    justify-content: flex-start;
}


.contact-format .flex{
    gap: 10px;
}

.contact-info .contact-format h2 {
    font-family: var(--header-font);
    color: var(--paragraph-text-color);
}

.contact-info .contact-format p {
    font-family: var(--paragraph-font);
    color: var(--paragraph-text-color);
}

.contact-center {
    flex-direction: row;
}

.contact-item {
    margin: 1rem 0;
}

/* Contact Form */
.contact-form form {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.form-control {
    display: flex;
    flex-direction: column;
}

.form-control label {
    font-family: var(--paragraph-font);
    color: var(--paragraph-text-color);
    font-size: 0.92rem;
    margin-bottom: 5px;
}

input[type="text"],
input[type="email"],
input[type="number"] {
    background-color: var(--secondary-background-color);
    border: 1px solid #8A8178;
    border-radius: 5px;
    padding: 10px;
    width: 100%;
}

.form-control textarea {
    background-color: var(--secondary-background-color);
    border: 1px solid #8A8178;
    border-radius: 5px;
    padding: 10px;
    width: 100%;
}

/* Footer */
.footer {
    background-color: var(--secondary-background-color);
    color: var(--paragraph-text-color);
    font-family: var(--paragraph-font);
    text-align: center;
}

.container .footer {
    display: flex;
    align-items: center;
}

.footer .social-media ul {
    display: flex;
    justify-content: flex-end;
    gap: 25px;
}

.social-media a {
    color: var(--paragraph-text-color);
}

.social-media a:hover {
    color: var(--primary-color);
    transition: 0.3s ease;
    text-decoration: none;
}

/* Animations */
@keyframes slideInFromBottom {
    0% {
        opacity: 1;
        transform: translateY(0);
    }
    100% {
        opacity: 1;
        transform: translateX(0);
    }
}

/* Utilities */
.bg-primary {
   background-color: var(--primary-background-color); 
}

.bg-secondary {
    background-color: var(--secondary-background-color);
}

.grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
}

.grid-2 {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

.my-1 {
    margin: 1rem 0;
}
.my-2 {
    margin: 1.5rem 0;
}
.my-3 {
    margin: 2rem 0;
}
.my-4 {
    margin: 3rem 0;
}
.my-5 {
    margin: 4rem 0;
}

.m-1 {
    margin: 1rem;
}
.m-2 {
    margin: 1.5rem;
}
.m-3 {
    margin: 2rem;
}
.m-4 {
    margin: 3rem;
}
.m-5 {
    margin: 4rem;
}

.py-1 {
    padding: 1rem 0;
}
.py-2 {
    padding: 1.5rem 0;
}
.py-3 {
    padding: 2rem 0;
}
.py-4 {
    padding: 3rem 0;
}
.py-5 {
    padding: 4rem 0;
}

.p-1 {
    padding: 1rem;
}
.p-2 {
    padding: 1.5rem;
}
.p-3 {
    padding: 2rem;
}
.p-4 {
    padding: 3rem;
}
.p-5 {
    padding: 4rem;
}

/* Media Queries */
@media(max-width: 768px) {
    .navbar .container {
        padding: 1rem;
    }

    .navbar .flex{
        flex-direction: column;
    }

    .navbar h1 {
        margin-bottom: 5px;
        font-size: 1.5rem;
        font-weight: 600;
    }

    .banner .flex {
        align-items: flex-start;
    }

    .banner .flex p {
        line-height: 1;
    }

    .grid, .grid-2 {
        grid-template-columns: 1fr;
    }

    .contact .container {
        justify-content: flex-start;
    }

    .contact-form form {
        padding: 0 1rem;
    }

    .contact-format {
        margin-bottom: 20px
    }

    .footer .social-media ul {
        align-items: center;
        justify-content: center;
    }
}

